# mars-lab

./: .env.example  .gitignore  .gitmodules  Dockerfile  Makefile  create-vrt.py  docker-compose.debug.yml  docker-compose.yml  download-hirise.py  fix_jp2.cpp  pyproject.toml  requirements.txt  workspace.code-workspace
footprints-manager/: pyproject.toml
footprints-manager/footprints/: cli.py  settings.py
mars-image-downloader/: pyproject.toml
system/: docker-compose.debug.yaml  docker-compose.yaml  nginx.conf
system/nginx-config/: nginx.conf
system/webroot/: index.html  main.css
tools/footprints-manager/: Dockerfile  pyproject.toml
tools/footprints-manager/footprints/: cli.py  database.py  settings.py  util.py
tools/footprints-manager/footprints/fixtures/: main.sql
tools/image-downloader/: Dockerfile  download-hirise.py  pyproject.toml
tools/image-downloader/mars_images/: __init__.py  config.py  download_hirise.py
tools/image-downloader/shell_utils/: __init__.py
tools/image-downloader/tile_server/: __init__.py
tools/mapboard/: geologic-map-config.json
