[tool.poetry]
name = "mars-data-backend"
version = "0.1.0"
description = "A command-line application to pull together an aligned Mars GIS environment"
authors = ["Daven Quinn <dev@davenquinn.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
typer = "^0.4.0"
rich = "^10.9.0"
click = "^8.0.1"
cogeo-mosaic = "^3.0.2"
titiler = "^0.3.10"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
