[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "A command-line application to pull together an aligned Mars GIS environment"
name = "mars-data-backend"
packages = [
  {include = "mars_images"},
  {include = "shell_utils"},
]
version = "0.1.0"

[tool.poetry.scripts]
mars-images = "mars_images:cli"

[tool.poetry.dependencies]
click = "^8.0.1"
#cogeo-mosaic = "^3.0.2"
python = "^3.8"
requests = "^2.26.0"
rich = "^10.9.0"
# titiler = "^0.3.10"
typer = "^0.4.0"
# uvicorn = "^0.15.0"
rio-cogeo = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
